Add MIT license

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ name = optical-flow
 version = attr: optical_flow.__version__
 description = "Pure python implementation of Gunnar Farneback's optical flow algorithm"
 long_description = file: README.md
+license = MIT
+url = https://github.com/ericPrince/optical-flow
 
 [options]
 include_package_data = True
@@ -11,3 +13,6 @@ python_requires = ~=3.6
 install_requires =
     numpy ~= 1.17
     scipy ~= 1.3
+
+[options.package_data]
+* = *.txt, *.rst, *.md
