--- a/setup.cfg
+++ b/setup.cfg
@@ -9,10 +9,10 @@ url = https://github.com/ericPrince/optical-flow
 [options]
 include_package_data = True
 py_modules = optical_flow
-python_requires = ~=3.6
+python_requires = >=3.6
 install_requires =
-    numpy ~= 1.17
-    scipy ~= 1.3
+    numpy >= 1.17
+    scipy >= 1.3
 
 [options.package_data]
 * = *.txt, *.rst, *.md
